@@ -22,6 +22,7 @@
 # Updates: 20-Dec-2010                                                         #
 #          19-Jan-2011 ; 22-Jan-2011 ; 02-Feb-2011 ; 11-May-2011               #
 #          13-Jan-2012 ; 16-Jan-2012 ; 23-Jan-2012 ; 02-May-2012 ; 12-Oct-2012 #
+#          15-Oct-2012                                                         #
 ################################################################################
 hydromod <- function(
                      param.values,                 # Numeric vector with the paramter values that will be used in the input files of the hydrological model
@@ -150,25 +151,38 @@ hydromod <- function(
   # In case different dates are given for 'sim', 'obs', 'gof.Ini', gof.Fin', 
   # 'sim' and 'obs' are subset to the time period selected for the GoF function 
   
+  if ( !missing(gof.Ini) | !missing(gof.Fin) ) 
+    ifelse ( grepl("%H", date.fmt, fixed=TRUE) | grepl("%M", date.fmt, fixed=TRUE) |
+             grepl("%S", date.fmt, fixed=TRUE) | grepl("%I", date.fmt, fixed=TRUE) |
+             grepl("%p", date.fmt, fixed=TRUE) | grepl("%X", date.fmt, fixed=TRUE),
+             subdaily <- TRUE, subdaily <- FALSE )
+  
   if (!missing(gof.Ini) ) {
+      ifelse(subdaily, gof.Ini <- as.POSIXct(gof.Ini, format=date.fmt),
+                       gof.Ini <- as.Date(gof.Ini, format=date.fmt) )
+                   
       if (!zoo::is.zoo(obs)) {
-        stop( "Invalid argument: 'obs' must be a zoo or xts object to use 'gof.Ini' !" )
-      } else obs <- window(obs, start=as.Date(gof.Ini, format=date.fmt) )
+        stop( "Invalid argument: 'obs' must be a zoo or xts object to use 'gof.Ini' !")
+      } else obs <- zoo:window.zoo(obs, start=gof.Ini) 
       if (!zoo::is.zoo(sim)) {
-        stop( "Invalid argument: 'sim' must be a zoo or xts object to use 'gof.Ini' !" )
-      } else sim <- window(sim, start=as.Date(gof.Ini, format=date.fmt) )
+        stop( "Invalid argument: 'sim' must be a zoo or xts object to use 'gof.Ini' !")
+      } else sim <- window(sim, start=gof.Ini)
+                    
   } # IF end 
    
   if (!missing(gof.Fin) ) {
+    ifelse(subdaily, gof.Fin <- as.POSIXct(gof.Fin, format=date.fmt),
+                     gof.Fin <- as.Date(gof.Fin, format=date.fmt) )
+                       
     if (gof.Fin < gof.Ini) {
       stop( "Invalid argument: 'gof.Fin < gof.Ini' (", gof.Fin, " < ", gof.Ini, ")" )
     } else { 
-           if (!zoo::is.zoo(obs)) {
-             stop( "Invalid argument: 'obs' must be a zoo or xts object to use 'gof.Fin' !" )
-           } else obs <- window(obs, end=as.Date(gof.Fin, format=date.fmt) )
-           if (!zoo::is.zoo(sim)) {
-             stop( "Invalid argument: 'sim' must be a zoo or xts object to use 'gof.Fin' !" )
-           } else sim <- window(sim, end=as.Date(gof.Fin, format=date.fmt) )
+             if (!zoo::is.zoo(obs)) {
+               stop( "Invalid argument: 'obs' must be a zoo or xts object to use 'gof.Fin' !" )
+             } else obs <- window(obs, end=gof.Fin)
+             if (!zoo::is.zoo(sim)) {
+               stop( "Invalid argument: 'sim' must be a zoo or xts object to use 'gof.Fin' !" )
+             } else sim <- window(sim, end=gof.Fin)
            } # IF end
   } # IF end  
   
